--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             для вашего бизнеса
           </h1>
           <div class="button">
-            <button class="modal-btn" type="button">Заказать услугу</button>
+            <button class="modal-btn" type="button" data-modal-open>
+              Заказать услугу
+            </button>
           </div>
         </section>
       </div>
@@ -412,7 +414,7 @@
           >
           <address class="footer-contact">
             <ul class="contact-list">
-              <li class="contact-list-item list ">
+              <li class="contact-list-item list">
                 <a
                   class="contact-list-link link adress-color"
                   href="https://goo.gl/maps/uwmR4bDLLU36MTBo9"
@@ -469,5 +471,16 @@
         </div>
       </div>
     </footer>
+    <!--MODAL WINDOW-->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="close-btn-icon">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
