--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,8 @@
 
           <ul class="list-portfolio list">
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper">
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-1.jpg"
@@ -91,12 +93,17 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title">Технокряк</h3>
               <p class="description-portfolio">Веб-сайт</p>
               </div>
+              </a>
             </li>
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper">
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-2.jpg"
@@ -104,14 +111,19 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title">
                 Постер <span lang="en">New Orlean vs Golden Star</span>
               </h3>
               <p class="description-portfolio">Дизайн</p>
             </div>
+            </a>
             </li>
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper">
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-3.jpg"
@@ -119,14 +131,19 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title">
                 Ресторан <span lang="en">Seafood</span>
               </h3>
               <p class="description-portfolio">Приложение</p>
             </div>
+            </a>
             </li>
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper">
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-4.jpg"
@@ -134,14 +151,19 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title">
                 Проект <span lang="en">Prime</span>
               </h3>
               <p class="description-portfolio">Маркетинг</p>
             </div>
+            </a>
             </li>
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper"> 
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-5.jpg"
@@ -149,14 +171,19 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title">
                 Проект <span lang="en">Boxes</span>
               </h3>
               <p class="description-portfolio">Приложение</p>
             </div>
+            </a>
             </li>
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper">
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-6.jpg"
@@ -164,14 +191,19 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title" lang="en">
                 Inspiration has no Borders
               </h3>
               <p class="description-portfolio">Веб-сайт</p>
             </div>
+            </a>
             </li>
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper">
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-7.jpg"
@@ -179,14 +211,19 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title">
                 Издание <span lang="en">Limited Edition</span>
               </h3>
               <p class="description-portfolio">Дизайн</p>
             </div>
+            </a>
             </li>
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper">
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-8.jpg"
@@ -194,14 +231,19 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title">
                 Проект <span lang="en">LAB</span>
               </h3>
               <p class="description-portfolio">Маркетинг</p>
             </div>
+            </a>
             </li>
             <li class="list-portfolio-item">
+              <a href="#" class="list-potfolio-link-wrapper link">
+              <div class="list-portfolio-img-wrapper">
               <img
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-9.jpg"
@@ -209,14 +251,18 @@
                 width="370"
                 height="294"
               />
+              <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+              </div>
               <div class="list-portfolio-content">
               <h3 class="list-portfolio-title" lang="en">Growing Business</h3>
               <p class="description-portfolio">Приложение</p>
+            </div>
+            </a>
             </li>
           </ul>
         </div>
-      </div></sectio
-      n>
+      </div>
+    </section>
     </main>
 
     <!--FOOTER-->
