подчёркивание ссылки текущей страницы

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="menu">
             <li class="menu-item list">
-              <a class="menu-link link" href="./index.html">Студия</a>
+              <a class="menu-link link current" href="./index.html">Студия</a>
             </li>
             <li class="menu-item list">
               <a class="menu-link link" href="./portfolio.html">Портфолио</a>
@@ -142,31 +142,46 @@
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="doing-list">
             <li class="doing-list-item list">
-              <img
-                class="doing-list-image"
-                src="./images/doing/doing-1.jpg"
-                alt="Работаем на ноутбуке"
-                width="370"
-                height="294"
-              />
+              <div class="doing-list-image-wrapper">
+                <img
+                  class="doing-list-image"
+                  src="./images/doing/doing-1.jpg"
+                  alt="Работаем на ноутбуке"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-wrapper">
+                  <p class="overlay-doing">Десктопные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="doing-list-item list">
-              <img
-                class="doing-list-image"
-                src="./images/doing/doing-2.jpg"
-                alt="Работаем на телефоне"
-                width="370"
-                height="294"
-              />
+              <div class="doing-list-image-wrapper">
+                <img
+                  class="doing-list-image"
+                  src="./images/doing/doing-2.jpg"
+                  alt="Работаем на телефоне"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-wrapper">
+                  <p class="overlay-doing">Мобильные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="doing-list-item list">
-              <img
-                class="doing-list-image"
-                src="./images/doing/doing-3.jpg"
-                alt="Работаем на планшете"
-                width="370"
-                height="294"
-              />
+              <div class="doing-list-image-wrapper">
+                <img
+                  class="doing-list-image"
+                  src="./images/doing/doing-3.jpg"
+                  alt="Работаем на планшете"
+                  width="370"
+                  height="294"
+                />
+                <div class="overlay-wrapper">
+                  <p class="overlay-doing">Дизайнерские решения</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
