--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
               <a class="menu-link link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item list">
-              <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+              <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="menu-item list">
               <a class="menu-link link" href="#">Контакты</a>
@@ -90,8 +90,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-1.jpg"
                 alt="Фото сотрудников"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
@@ -108,8 +106,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-2.jpg"
                 alt="Двое парней играют в баскетбол"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
@@ -128,8 +124,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-3.jpg"
                 alt="Рыба"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
@@ -148,8 +142,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-4.jpg"
                 alt="Наушники"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
@@ -168,8 +160,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-5.jpg"
                 alt="Коробки"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
@@ -188,8 +178,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-6.jpg"
                 alt="Монитор"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
@@ -208,8 +196,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-7.jpg"
                 alt="Открытая книга"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
@@ -228,8 +214,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-8.jpg"
                 alt="Бирка"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
@@ -248,8 +232,6 @@
                 class="list-portfolio-image"
                 src="./images/portfolio/portfolio-9.jpg"
                 alt="Ноутбук"
-                width="370"
-                height="294"
               />
               <p class="overlay-portfolio">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
               </div>
